Sprint 3 (#6)
Co-authored-by: SMANUM <125576365+SMANUM@users.noreply.github.com>
Co-authored-by: Lino De Ruvo <lino.deruvo@aurigaspa.com>